# powerbi-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  INSTALL.html  LICENSE  README.md  README.vi.md  README_CLIENTS.md  ROADMAP.md  cli.py  install.ps1  mcp_server_powerbi.py  pack.ps1  policy.example.json  pyproject.toml  requirements.loose.txt  requirements.txt  test_mcp_local.py  uninstall.ps1
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: INSTALL.html  README.md  UAT-REPORT.md  index.html
docs/assets/: site.css  site.js
docs/feature/: index.html
docs/install/: index.html
docs/instruction/: index.html
docs/template/: index.html  templates.json
hosts/: README.md
hosts/antigravity/: README.md
hosts/claude/: README.md
hosts/codex/: README.md
plugins/: README.md
plugins/powerbi-agent/.claude-plugin/: plugin.json
plugins/powerbi-agent/agents/: pbi-knowledge-curator.md
plugins/powerbi-agent/commands/: pbi-done.md  pbi-new.md  pbi-pack.md  pbi-recall.md  pbi-scan.md  pbi-setup.md
powerbi_agent/: __init__.py  adomd.py  app.py  discovery.py  knowledge.py  pbir.py  policy.py  tools_design.py  tools_distill.py  tools_knowledge.py  tools_query.py  tools_template.py  tools_tom.py  util.py
scripts/: README.md  build_template_gallery.py  cli.py  test_mcp_local.py
skill/pbi-pipeline/: SKILL.md
skill/powerbi-mcp/: SKILL.md
templates/: README.md
templates/kpim-business-light/: README.md  _page.json  blueprint.md  kit.json
tests/: test_installer.py  test_unit.py
tests/installer/: installer.tests.ps1
(+33 files in other folders)
